@@ -73,7 +73,7 @@ int main(void)
     adc = sys_adc();
     adc >>= 4;
     if ( adc >= 0x0f && adc < 0x30 )
-      dog_set_contrast(adc);
+      dog_SetContrast(adc);
     dog_Delay(120);
     walk_Step();
   }  
